--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-Only intentio is to keep some funny moments while learning and maintaining Git streak.
+Only intention is to keep some funny moments while learning and maintaining Git streak.
